--- a/JavaScript Playground/JavaScript Playground.csproj
+++ b/JavaScript Playground/JavaScript Playground.csproj
@@ -68,6 +68,8 @@
   <ItemGroup>
     <Content Include="ajax.txt" />
     <Content Include="arrays.html" />
+    <Content Include="BootstrapButtonState.html" />
+    <Content Include="calculator.html" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -115,6 +117,7 @@
     <Content Include="jquerySelectors.html" />
     <Content Include="jsonParse_append.html" />
     <Content Include="jsonParse_forloop.html" />
+    <Content Include="Libraries\css\pulse.css" />
     <Content Include="objectAndInheritance.html" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="notify.html" />
@@ -151,11 +154,15 @@
     <Content Include="Scripts\notify.min.js" />
     <Content Include="Scripts\parse.js" />
     <Content Include="Scripts\postToApi.js" />
+    <Content Include="strings.html" />
     <Content Include="Test.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Libraries\js\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
